Minor modification in index.html and style.css

--- a/index.html
+++ b/index.html
@@ -85,19 +85,19 @@
         <ul class="skills__list">
           <li class="skills__column">
             <h2 class="skills__title">HTML</h2>
-            <span class="skills__years">1 years</span>
+            <span class="skills__years">1 year</span>
           </li>
           <li class="skills__column">
             <h2 class="skills__title">CSS</h2>
-            <span class="skills__years">1 years</span>
+            <span class="skills__years">1 year</span>
           </li>
           <li class="skills__column">
             <h2 class="skills__title">Javascript</h2>
-            <span class="skills__years">1 years</span>
+            <span class="skills__years">1 year</span>
           </li>
           <li class="skills__column">
             <h2 class="skills__title">React</h2>
-            <span class="skills__years">1 years</span>
+            <span class="skills__years">1 year</span>
           </li>
         </ul>
       </section>
